# fusion

./: Cargo.toml  README.md  flake.nix  mlir.nix  mlir2.nix  mlirflake.nix  shell.nix
crates/compiler/: Cargo.toml
crates/compiler/ir_test_programs/: test_arrays.ts  test_basic_struct.ts  test_project.ts
crates/compiler/src/: ir.rs  typed_ast.rs  typed_script.pest
crates/compiler/src/analysis/: borrow_checker.rs  free_dead_resources.rs  ir_transformer.rs  liveness_analysis.rs  type_evaluation.rs
crates/compiler/src/ast/: mod.rs  parser.rs
crates/compiler/src/snapshots/: fusion__ir__test__test_well_formed_control_flow_graph_test_arrays.ts_function_FunctionDeclarationID(33).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_basic_struct.ts_function_FunctionDeclarationID(17).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_basic_struct.ts_function_FunctionDeclarationID(42).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_borrow.ts_function_FunctionDeclarationID(29).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_if.ts_function_FunctionDeclarationID(29).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_if.ts_function_FunctionDeclarationID(32).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_if_else.ts_function_FunctionDeclarationID(42).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_three.ts_function_FunctionDeclarationID(17).snap  fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_three.ts_function_FunctionDeclarationID(35).snap  (+32 more)
(+82 files in other folders)
